fix text alignment in FF
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@21924 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_notes.scss
+++ b/src/main/resources/scss/_notes.scss
@@ -485,6 +485,10 @@
 					content: 'Posted by ';
 				}
 
+				* {
+					vertical-align: middle;
+				}
+
 				.name{
 					color: $primary-blue;
 					margin-right: 5px;
